WebCore:

Reviewed by mitz.
        
        REGRESSION (r16122): min/max widths incorrectly calculated for contentEditable text
        http://bugs.webkit.org/show_bug.cgi?id=11570

        * rendering/RenderStyle.h:
        (WebCore::RenderStyle::isSpace): Added.
        * rendering/RenderText.cpp:
        (WebCore::RenderText::calcMinMaxWidth): For the purposes of calculating the line widths, 
        treat non-breaking spaces the same as normal spaces if -webkit-nbsp-mode is 'space'

LayoutTests:

        Reviewed by mitz.

        REGRESSION (r16122): min/max widths incorrectly calculated for contentEditable text
        http://bugs.webkit.org/show_bug.cgi?id=11570

        * fast/text/whitespace/nbsp-mode-and-linewraps-expected.checksum: Added.
        * fast/text/whitespace/nbsp-mode-and-linewraps-expected.png: Added.
        * fast/text/whitespace/nbsp-mode-and-linewraps-expected.txt: Added.
        * fast/text/whitespace/nbsp-mode-and-linewraps.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@17724 bbb929c8-8fbe-4397-9dbb-9b2b20218538